--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,8 +21,8 @@
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>  
-                <button *ngIf="loading" [disabled]="loading" class="btn btn-primary">
-                    <span  class="spinner-border spinner-border-sm mr-1"></span>
+                <button  [disabled]="loading" class="btn btn-primary">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>  
                 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>                             
